Testing how to stop text stretching on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,11 +60,10 @@ a.contact {
    position: absolute;
    top: 50%;
    left: 50%;
-   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
    font-size: 35px;
-   font-size: calc(24px + 0.75vw);
+   /* font-size: calc(24px + 0.75vw); */
    white-space: nowrap;
 }
 
@@ -78,6 +77,7 @@ a.contact {
    text-align: center;    
    bottom: 0px; 
    width: 100%;
+   font-size: calc(0.75vw);
 }
 
 a.hamzalatif {
@@ -94,23 +94,8 @@ a.hamzalatif:hover {
    position: absolute;
    top: 50%;
    left: 50%;
-   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
-   font-size: 35px;
-   font-size: calc(24px + 0.75vw);
-   white-space: nowrap;
-}
-
-.portfoliocenter {
-   margin: 0;
-   position: absolute;
-   top: 50%;
-   left: 50%;
-   -ms-transform: translate(-50%, -50%);
-   transform: translate(-50%, -50%);
-   text-align: center;
-   font-size: 35px;
    font-size: calc(24px + 0.75vw);
    white-space: nowrap;
 }
@@ -136,10 +121,8 @@ a.gitlink {
    position: absolute;
    top: 50%;
    left: 50%;
-   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    text-align: center;
-   font-size: 35px;
    font-size: calc(24px + 0.75vw);
    white-space: nowrap;
 }
@@ -148,7 +131,6 @@ a.gitlink {
    margin-top: 700px;
    position: absolute;
    left: 50%;
-   -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    font-size: calc(24px + 0.75vw);
    white-space: nowrap;
@@ -156,14 +138,12 @@ a.gitlink {
 
 .aboutdetails {
    margin-top: 20px;
-   width: 900px;
    white-space: normal;
-   text-align: left;
    font-size: 22px;
 }
 
 @media screen and (max-height: 240px) {
-   .center, .portfoliocenter {
+   .center {
       top: 120px;
    }
 }
